--- a/css/hexo-theme-yun.css
+++ b/css/hexo-theme-yun.css
@@ -1,5 +1,5 @@
 :root {
-  --hty-primary-color: #0078e7;
+  --hty-primary-color: #000;
   --hty-success-color: #21ba45;
   --hty-warning-color: #f2711c;
   --hty-danger-color: #db2828;
@@ -9,9 +9,9 @@
   --hty-yellow-color: #ff8718;
 }
 .primary {
-  color: #005eb4;
+  color: #000;
   --blockquote-border-left-color: var(--hty-primary-color);
-  --blockquote-bg-color: rgba(0,120,231,0.1);
+  --blockquote-bg-color: rgba(0,0,0,0.1);
 }
 .success {
   color: #198f35;
@@ -54,7 +54,7 @@
   --hty-text-color: #333;
   --hty-secondary-text-color: #555;
   --post-block-bg-color: #fff;
-  --smc-link-color: #0078e7;
+  --smc-link-color: #000;
 }
 .disable-hover,
 .disable-hover * {
@@ -170,7 +170,7 @@ details[open] {
 summary {
   font-weight: bold;
   padding: 0.8rem 0.8rem 0.8rem 1rem;
-  background-color: rgba(0,120,231,0.1);
+  background-color: rgba(0,0,0,0.1);
 }
 details[open] summary {
   border-bottom: 1px solid var(--smc-secondary);
@@ -281,7 +281,7 @@ body::before {
 }
 .char-left {
   border-left: 1px solid var(--banner-line-color);
-  border-right: 0px solid rgba(0,120,231,0.1);
+  border-right: 0px solid rgba(0,0,0,0.1);
   border-right-width: 0px;
   animation-duration: 0.4s;
   animation-delay: 0.4s;
@@ -289,7 +289,7 @@ body::before {
   animation-timing-function: ease-out;
 }
 .char-right {
-  border-left: 0px solid rgba(0,120,231,0.1);
+  border-left: 0px solid rgba(0,0,0,0.1);
   border-right: 1px solid var(--banner-line-color);
   border-left-width: 0px;
   animation-duration: 0.4s;
@@ -378,7 +378,7 @@ body::before {
   animation: float 2s ease-in-out infinite;
 }
 #goDown .icon {
-  color: #0078e7;
+  color: #000;
   width: 3rem;
   height: 3rem;
 }
@@ -822,21 +822,21 @@ body::before {
 .pagination .space:hover {
   font-weight: normal;
   color: var(--hty-bg-color) !important;
-  background: rgba(0,120,231,0.7);
+  background: rgba(0,0,0,0.7);
 }
 .pagination .prev:active,
 .pagination .next:active,
 .pagination .page-number:active,
 .pagination .space:active {
   color: var(--hty-bg-color) !important;
-  background: rgba(32,148,255,0.9);
+  background: rgba(51,51,51,0.9);
 }
 .pagination .prev.current,
 .pagination .next.current,
 .pagination .page-number.current,
 .pagination .space.current {
   font-weight: normal;
-  background: rgba(32,148,255,0.9);
+  background: rgba(51,51,51,0.9);
   color: var(--hty-bg-color) !important;
   cursor: default;
 }
@@ -947,7 +947,7 @@ body::before {
   margin: 0 1rem;
   padding: 0 0.5rem;
   border-radius: 2px;
-  color: #0078e7;
+  color: #000;
   transition-property: all;
   transition-duration: 0.3s;
   transition-delay: 0s;
@@ -965,10 +965,10 @@ body::before {
   -webkit-font-smoothing: antialiased;
 }
 .hty-button:hover {
-  background-color: rgba(0,120,231,0.05);
+  background-color: rgba(0,0,0,0.05);
 }
 .hty-button--raised {
-  background-color: var(--hty-primary-color, #0078e7);
+  background-color: var(--hty-primary-color, #000);
   box-shadow: 0px 2px 10px -1px rgba(0,0,0,0.3);
   color: #fff;
 }
@@ -977,7 +977,7 @@ body::before {
 }
 .hty-button--raised:hover {
   color: #fff;
-  background-color: rgba(0,120,231,0.9);
+  background-color: rgba(0,0,0,0.9);
 }
 .hty-icon-button {
   display: inline-flex;
@@ -993,10 +993,10 @@ body::before {
   transition-delay: 0s;
 }
 .hty-icon-button:hover {
-  background-color: rgba(0,120,231,0.1);
+  background-color: rgba(0,0,0,0.1);
 }
 .hty-icon-button:active {
-  background-color: rgba(0,120,231,0.3);
+  background-color: rgba(0,0,0,0.3);
 }
 .button-glow {
   animation-duration: 2s;
@@ -1009,7 +1009,7 @@ body::before {
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
   to {
-    box-shadow: 0 0 20px rgba(0,120,231,0.3);
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
   }
 }
 @-webkit-keyframes glowing {
@@ -1017,7 +1017,7 @@ body::before {
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
   to {
-    box-shadow: 0 0 20px rgba(0,120,231,0.3);
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
   }
 }
 @-o-keyframes glowing {
@@ -1025,7 +1025,7 @@ body::before {
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
   to {
-    box-shadow: 0 0 20px rgba(0,120,231,0.3);
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
   }
 }
 @keyframes glowing {
@@ -1033,7 +1033,7 @@ body::before {
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
   to {
-    box-shadow: 0 0 20px rgba(0,120,231,0.3);
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
   }
 }
 .hty-card {
@@ -1058,16 +1058,16 @@ body::before {
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 2px;
-  background-color: rgba(0,120,231,0.5);
+  background-color: rgba(0,0,0,0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-  background-color: rgba(0,120,231,0.3);
+  background-color: rgba(0,0,0,0.3);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0,120,231,0.7);
+  background-color: rgba(0,0,0,0.7);
 }
 ::-webkit-scrollbar-thumb:active {
-  background-color: rgba(0,120,231,0.9);
+  background-color: rgba(0,0,0,0.9);
 }
 .iconfont {
   font-size: 1.2rem;
@@ -1089,7 +1089,7 @@ body::before {
 .spinner {
   width: 60px;
   height: 60px;
-  border: 1px solid #0078e7;
+  border: 1px solid #000;
   margin: 100px auto;
   animation: rotateplane 1.2s infinite ease-in-out;
 }
@@ -1182,7 +1182,7 @@ body::before {
   display: flex;
   align-items: center;
   min-height: 3rem;
-  border-top: 1px solid rgba(0,120,231,0.05);
+  border-top: 1px solid rgba(0,0,0,0.05);
   padding-left: 1rem;
   padding-right: 1rem;
   justify-content: space-between;
@@ -1209,7 +1209,7 @@ body::before {
   height: 100%;
   width: 0;
   right: 0;
-  background: rgba(0,120,231,0.08);
+  background: rgba(0,0,0,0.08);
   border-radius: 4px;
   transition: width 0.2s ease;
 }
@@ -1276,7 +1276,7 @@ body::before {
 .post-collapse .collection-title {
   position: relative;
   margin: 0;
-  border-bottom: 2px solid rgba(0,120,231,0.6);
+  border-bottom: 2px solid rgba(0,0,0,0.6);
 }
 .post-collapse .collection-title::before {
   content: '';
@@ -1284,11 +1284,11 @@ body::before {
   top: 50%;
   width: 2px;
   height: 50%;
-  background: rgba(0,120,231,0.3);
+  background: rgba(0,0,0,0.3);
 }
 .post-collapse .collection-title .archive-year {
   font-family: 'Source Code Pro', Consolas, Monaco, SFMono-Regular, 'Ubuntu Mono', Menlo, monospace;
-  color: #0078e7;
+  color: #000;
   margin: 0 1.5rem;
 }
 .post-collapse .collection-title .archive-year::before {
@@ -1300,7 +1300,7 @@ body::before {
   margin-top: -4px;
   width: 1.5rem;
   height: 1.5rem;
-  background: #0078e7;
+  background: #000;
   border-radius: 50%;
 }
 .post-collapse .post-item {
@@ -1311,11 +1311,11 @@ body::before {
   position: absolute;
   width: 2px;
   height: 100%;
-  background: rgba(0,120,231,0.3);
+  background: rgba(0,0,0,0.3);
 }
 .post-collapse .post-header {
   position: relative;
-  border-bottom: 2px solid rgba(0,120,231,0.3);
+  border-bottom: 2px solid rgba(0,0,0,0.3);
   display: flex;
 }
 .post-collapse .post-header::before {
@@ -1327,7 +1327,7 @@ body::before {
   height: 0.5rem;
   margin-left: -4px;
   border-radius: 50%;
-  border: 1px solid #0078e7;
+  border: 1px solid #000;
   background-color: #fff;
   z-index: 1;
   transition-property: all;
@@ -1336,7 +1336,7 @@ body::before {
   transition-property: background;
 }
 .post-collapse .post-header:hover::before {
-  background: #0078e7;
+  background: #000;
 }
 .post-collapse .post-header .post-title {
   margin-left: 0.1rem;
@@ -1434,7 +1434,7 @@ body::before {
 .markdown-body blockquote {
   padding: 0.6rem 1rem;
   border-left: 4px solid var(--blockquote-border-left-color);
-  background-color: var(--blockquote-bg-color, rgba(0,120,231,0.05));
+  background-color: var(--blockquote-bg-color, rgba(0,0,0,0.05));
 }
 .markdown-body blockquote p {
   margin: 0;
@@ -1466,7 +1466,7 @@ body::before {
   transition: 0.4s;
 }
 .post-nav-item:hover {
-  background-color: rgba(0,120,231,0.1);
+  background-color: rgba(0,0,0,0.1);
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
 .post-nav-prev {
@@ -1574,7 +1574,7 @@ body::before {
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
-  background-color: #0078e7;
+  background-color: #000;
 }
 .hamburger-box {
   outline: none;
@@ -1592,7 +1592,7 @@ body::before {
 .hamburger-inner::after {
   width: 25px;
   height: 2px;
-  background-color: #0078e7;
+  background-color: #000;
   border-radius: 3px;
   position: absolute;
 }
@@ -1638,15 +1638,15 @@ body::before {
   margin-bottom: 0;
 }
 .sidebar-nav .sidebar-nav-item {
-  border: 1px solid #0078e7;
-  color: #0078e7;
+  border: 1px solid #000;
+  color: #000;
   margin: 0 1.25rem;
 }
 .sidebar-nav .sidebar-nav-item:hover {
   transition-property: all;
   transition-duration: 0.3s;
   transition-delay: 0s;
-  background-color: #0078e7;
+  background-color: #000;
   color: #fff;
 }
 .sidebar-nav .sidebar-nav-item .icon {
@@ -1654,9 +1654,9 @@ body::before {
   height: 1.5rem;
 }
 .sidebar-nav .sidebar-nav-active {
-  background-color: #0078e7;
+  background-color: #000;
   color: #fff;
-  box-shadow: 0 0 10px rgba(0,120,231,0.2);
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 .post-toc {
   line-height: 1.8;
@@ -1834,7 +1834,7 @@ body::before {
   transition: 0.4s;
 }
 .site-author-avatar img:hover {
-  box-shadow: 0 0 30px rgba(0,120,231,0.2);
+  box-shadow: 0 0 30px rgba(0,0,0,0.2);
 }
 .site-author-avatar img {
   border-radius: 50%;
@@ -1908,7 +1908,7 @@ body::before {
   bottom: 1.1rem;
   z-index: 20;
   opacity: 0;
-  color: #0078e7;
+  color: #000;
   transition-property: all;
   transition-duration: 0.3s;
   transition-delay: 0s;
@@ -2001,7 +2001,7 @@ body::before {
     --banner-line-color: #fff;
     --banner-char-color: #fff;
     --post-block-bg-color: #1b1f2e;
-    --smc-link-color: #3ca1ff;
+    --smc-link-color: #4d4d4d;
   }
   :root:not([data-user-color-scheme]) ::-webkit-input-placeholder {
     color: #fff;
@@ -2041,19 +2041,19 @@ body::before {
   :root:not([data-user-color-scheme]) .pagination .next:hover,
   :root:not([data-user-color-scheme]) .pagination .page-number:hover,
   :root:not([data-user-color-scheme]) .pagination .space:hover {
-    background: rgba(199,228,255,0.9);
+    background: rgba(204,204,204,0.9);
   }
   :root:not([data-user-color-scheme]) .pagination .prev:active,
   :root:not([data-user-color-scheme]) .pagination .next:active,
   :root:not([data-user-color-scheme]) .pagination .page-number:active,
   :root:not([data-user-color-scheme]) .pagination .space:active {
-    background: #0078e7;
+    background: #000;
   }
   :root:not([data-user-color-scheme]) .pagination .prev.current,
   :root:not([data-user-color-scheme]) .pagination .next.current,
   :root:not([data-user-color-scheme]) .pagination .page-number.current,
   :root:not([data-user-color-scheme]) .pagination .space.current {
-    background: rgba(227,242,255,0.9);
+    background: rgba(230,230,230,0.9);
     cursor: default;
   }
   :root:not([data-user-color-scheme]) .aplayer {
@@ -2068,7 +2068,7 @@ body::before {
   --banner-line-color: #fff;
   --banner-char-color: #fff;
   --post-block-bg-color: #1b1f2e;
-  --smc-link-color: #3ca1ff;
+  --smc-link-color: #4d4d4d;
 }
 [data-user-color-scheme='dark'] ::-webkit-input-placeholder {
   color: #fff;
@@ -2108,19 +2108,19 @@ body::before {
 [data-user-color-scheme='dark'] .pagination .next:hover,
 [data-user-color-scheme='dark'] .pagination .page-number:hover,
 [data-user-color-scheme='dark'] .pagination .space:hover {
-  background: rgba(199,228,255,0.9);
+  background: rgba(204,204,204,0.9);
 }
 [data-user-color-scheme='dark'] .pagination .prev:active,
 [data-user-color-scheme='dark'] .pagination .next:active,
 [data-user-color-scheme='dark'] .pagination .page-number:active,
 [data-user-color-scheme='dark'] .pagination .space:active {
-  background: #0078e7;
+  background: #000;
 }
 [data-user-color-scheme='dark'] .pagination .prev.current,
 [data-user-color-scheme='dark'] .pagination .next.current,
 [data-user-color-scheme='dark'] .pagination .page-number.current,
 [data-user-color-scheme='dark'] .pagination .space.current {
-  background: rgba(227,242,255,0.9);
+  background: rgba(230,230,230,0.9);
   cursor: default;
 }
 [data-user-color-scheme='dark'] .aplayer {
